Fixed logo in header on mobile devices.

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -520,6 +520,12 @@ input[type="color"]:focus,
 	margin-bottom: 20px;
 }
 
+@media screen and (max-width: 380px) {
+  .navbar-brand img {
+    width: 200px !important;
+  }
+}
+
 
 /* 
 	==================
